fix(body): overflow fixes

--- a/src/index.scss
+++ b/src/index.scss
@@ -9,5 +9,4 @@
 html,
 body {
     min-height: 100vh;
-    overflow: auto;
 }
